[GTK] ASSERTION FAILED: !m_flushingLayers https://bugs.webkit.org/show_bug.cgi?id=172025

Reviewed by Žan Doberšek.

Source/WebCore:

The problem is that syncImageBacking() is calling didChangeLayerState(). All sync methods are called by
flushCompositingStateForThisLayerOnly() while flushing layers, so none of them should call didChange method that
will schedule a new flush while flushing.

* platform/graphics/texmap/coordinated/CoordinatedGraphicsLayer.cpp:
(WebCore::CoordinatedGraphicsLayer::syncImageBacking):

LayoutTests:

* platform/gtk/TestExpectations:

Canonical link: https://commits.webkit.org/188963@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@216759 268f45cc-cd09-0410-ab3c-d52691b4dbfc